--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <div id="app"></div>
-  <script src="/public/js/app.927281178b6603c8eefb.js"></script>
-<script src="/public/js/vendors~app.d0cf81d2f67bc639079b.js"></script>
+  <script src="/piano_keys_midi_api/public/js/app.17b4fa0418a742d1a4b7.js"></script>
+<script src="/piano_keys_midi_api/public/js/vendors~app.d0cf81d2f67bc639079b.js"></script>
 </body>
 </html>
